fix: 배치 쿼리를 사용해서 personal Event를 한꺼번에 찾아오도록 수정
이 과정에서 선택된 사용자들이 앞에 오도록 수정